guard against badly loaded kgraphviewer libs

BUG: 256273